Fixed battle screen overlap of grids

--- a/Battle.css
+++ b/Battle.css
@@ -1,14 +1,20 @@
 body {
-  background-image: url(./Images/Battleship\ -\ Wallpaper\ front\ page\ 2.jpg);
-  background-repeat: no-repeat;
+  background: url(./Images/Battleship\ -\ Wallpaper\ front\ page\ 2.jpg) no-repeat center center fixed;
   background-size: cover;
   background-color: black;
+}
+
+.Header {
+  border: 2px solid red;
+  display: flex;
+  align-items:initial;
+  justify-content: space-between;
+  padding: 5px;
 }
 
 h1 {
   color: white;
   font-size: 60px;
-  position: fixed;
   top: 3%;
   left: 3%;
   margin: 0%;
@@ -19,68 +25,72 @@ h1 {
   color: white;
   width: 35px;
   height: 35px;
-  position: fixed;
   top: 3%;
   right: 3%;
 }
 
 #gridTitle {
+  border: 2px red solid;
+  margin: 0;
+  text-align: center;
   color: white;
   font-size: 30px;
 }
 
 #gridTitle2 {
+  border: 2px red solid;
+  margin: 0;
+  text-align: center;
   color: white;
   font-size: 30px;
 }
 
 #container1 {
+  border: 2px red solid;
   display: flex;
   justify-content: space-evenly;
-  margin-top: 12%;
+  /* margin-top: 12%; */
   
 }
 
 #container2 {
+  border: 2px red solid;
   display:flex;
   flex-direction: column;
 }
 
 #container3 {
+  border: 2px red solid;
   display:flex;
   flex-direction: column;
 }
+
 .playerBoard {
-  width: 500px;
   display: grid;
   grid-template: repeat(10, 0fr)/repeat(10, 0fr);
   
 }
 
 .horizontal {
-  border: solid;
-  border-color: black;
-  border-width: 3px;
-  height: 50px;
-  width: 50px;
+  border: solid black 3px;
+  height: 40px;
+  width: 40px;
   background-color: rgba(255, 255, 255, .65);
   font-size: 30px;
   text-align: center;
   color: black;
 }
 
-
 .compBoard {
+  /* border: solid green 2px; */
   display: grid;
   grid-template: repeat(10, 0fr)/repeat(10, 0fr);
 }
 
 .horizontal2 {
-  border: solid;
-  border-color: black;
-  border-width: 3px;
-  height: 50px;
-  width: 50px;
+  border: solid black 3px;
+  height: 40px;
+  width: 40px;
   background-color: rgba(255, 255, 255, .65);
   font-size: 30px;
   text-align: center;
